Edits to examples page

--- a/static/examples.html
+++ b/static/examples.html
@@ -98,8 +98,17 @@
 			</p></br>		
 
 			<p>Dump out a unique list of all phonetics</p>
-			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=pho&output=distinct">
-										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>pho</strong>&output=<strong>distinct</strong></a>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=pho">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>pho</strong></a>
+			</p></br>		
+
+			<p>Dump out a unique list of all words</p>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong></a>
+			</p></br>		
+			<p>Dump out a unique list of all emoticons</p>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=emo">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>emo</strong></a>
 			</p></br>		
 
 			</div>
