Minor changes to the home and credits pages

--- a/static/index.html
+++ b/static/index.html
@@ -130,7 +130,7 @@
 		  <div id="centre">
 			<h2>API Description</h2>
 				</br>							
-					<p>The Wordslang API makes it easy to discover different representations of words in the English language.</p>
+					<p>The Wordslang open source API makes it easy to discover different representations of words in the English language.</p>
 					<p>Wordslang uses a REST(ish) API, supporting GET and a limited number of experimental POST functions. </p>
 					<p>All responses are in JSON format. </p>
 				
