--- a/static/credits.html
+++ b/static/credits.html
@@ -29,7 +29,13 @@
 		  <div id="centre">
 			<h2>Credits</h2>
 			</br>
-			<p> Credits to data producers... </p>
+			<p> Credits to the data various data producers: </p>
+			<ul>
+				<li><a href="http://www.techdictionary.com/emoticon.html">Tech Dictionary</a> <li>
+				<li><a href="http://www.noslang.com">No Slang</a> <li>
+				<li><a href="https://sites.google.com/a/student.unimelb.edu.au/hanb/research">
+				Bo Han, Paul Cook and Timothy Baldwin. 2012. </a> <li>
+			</ul>
 			</br>
 			</br>
 			<img border="0" src="/static/python.png" alt="Powered By Python"/>			
