html syntax mod

--- a/static/credits.html
+++ b/static/credits.html
@@ -31,10 +31,10 @@
 			</br>
 			<p> Credits to the data various data producers: </p>
 			<ul>
-				<li><a href="http://www.techdictionary.com/emoticon.html">Tech Dictionary</a> <li>
-				<li><a href="http://www.noslang.com">No Slang</a> <li>
+				<li><a href="http://www.techdictionary.com/emoticon.html">Tech Dictionary</a> </li>
+				<li><a href="http://www.noslang.com">No Slang</a> </li>
 				<li><a href="https://sites.google.com/a/student.unimelb.edu.au/hanb/research">
-				Bo Han, Paul Cook and Timothy Baldwin. 2012. </a> <li>
+				Bo Han, Paul Cook and Timothy Baldwin. 2012. </a> </li>
 			</ul>
 			</br>
 			</br>
