--- a/static/examples.html
+++ b/static/examples.html
@@ -79,7 +79,7 @@
 										   http://word-redsquirrel.dotcloud.com/ws?token=<strong>:-)</strong>&check=<strong>emo</strong>&output=<strong>word</strong></a>
 			</p></br>		
 
-			<h4>Some other search examples</h4>
+			<h4>Other cool stuff</h4>
 			</br>
 
 			<p>Check all fields for a token and return the word</p>
@@ -106,9 +106,14 @@
 			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word">
 										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong></a>
 			</p></br>		
-			<p>Dump out a unique list of all emoticons</p>
-			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=emo">
-										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>emo</strong></a>
+			<p>Dump out a unique list of all words begining with the letter a (as a way of reducing the query) </p>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&output=a">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong>&output=<strong>a</strong></a>
+			</p></br>		
+
+			<p>Dump out a unique list of all words (works for pho too - just change check=) of between 2 and 4 characters long </p>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&wordlength=2&edits=0">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=word&wordlength=<strong>3</strong>&edits=<strong>1</strong></a>
 			</p></br>		
 
 			</div>
