Change in URL parameters from wordlength to length and output to initial for distinctdump? queries

--- a/static/examples.html
+++ b/static/examples.html
@@ -107,13 +107,13 @@
 										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong></a>
 			</p></br>		
 			<p>Dump out a unique list of all words begining with the letter a (as a way of reducing the query) </p>
-			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&output=a">
-										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong>&output=<strong>a</strong></a>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&initial=a">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=<strong>word</strong>&initial=<strong>a</strong></a>
 			</p></br>		
 
 			<p>Dump out a unique list of all words (works for pho too - just change check=) of between 2 and 4 characters long </p>
-			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&wordlength=2&edits=0">
-										   http://word-redsquirrel.dotcloud.com/distinctdump?check=word&wordlength=<strong>3</strong>&edits=<strong>1</strong></a>
+			<p><a style="color:blue" href="http://word-redsquirrel.dotcloud.com/distinctdump?check=word&length=2&edits=0">
+										   http://word-redsquirrel.dotcloud.com/distinctdump?check=word&length=<strong>3</strong>&edits=<strong>1</strong></a>
 			</p></br>		
 
 			</div>
